pkg/reconciler/openshift/openshiftpipelinesascode/testdata/test-update-route.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: pipelines-as-code-info
  namespace: pipelines-as-code
  labels:
    app.kubernetes.io/version: "devel"
    app.kubernetes.io/part-of: pipelines-as-code
data:
  # pipelines as code controller version
  version: "devel"

  # controller url to be used for configuring webhook using cli
  controller-url: ""

  # display the configured provider on the platform
  # only one provider type to be configured at a time
  # eg. if GitHub App is configured, then webhooks should not be configured
  provider: ""
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: pipelines-as-code
    app.kubernetes.io/version: "devel"
    pipelines-as-code/route: controller
  name: pipelines-as-code-controller
  namespace: pipelines-as-code
spec:
  host: pac.controller.test.com
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pipelines-as-code-controller
    weight: 100
  wildcardPolicy: None
