pkg/reconciler/openshift/openshiftpipelinesascode/testdata/test-expected-additional-pac-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: pipelines-as-code
    app.kubernetes.io/version: "v0.23.0"
    pipelines-as-code/route: test-controller
  name: test-controller
  namespace: pipelines-as-code
spec:
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: test-controller
    weight: 100
  wildcardPolicy: None
